--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
 </head>
 <body>
 
+  <!-- Loading Screen -->
+  <div id="loader">
+    <div class="loader-inner">
+      <div class="loader-ring"></div>
+      <div class="loader-logo">AC</div>
+    </div>
+    <p class="loader-text">Attendance Calculator</p>
+    <p class="loader-sub">Loading your data...</p>
+  </div>
+
   <header>
     <h1>Attendance Calculator</h1>
     <p>College Attendance Tracker</p>
-    <button class="theme-toggle" id="theme-toggle" title="Toggle theme">🌙</button>
+    <button class="theme-toggle" id="theme-toggle" title="Toggle theme" aria-label="Toggle theme"></button>
   </header>
 
   <div class="scroll-content">
@@ -645,8 +655,8 @@
       localStorage.setItem('theme', t);
       /* Icon shows what you'll switch TO (opposite of current) */
       themeBtn.innerHTML = t === 'dark'
-        ? '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>'
-        : '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><path d="M21 12.79A9 9 0 1 1 11.21 3a7 7 0 0 0 9.79 9.79z"/></svg>';
+        ? '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>'
+        : '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3a7 7 0 0 0 9.79 9.79z"/></svg>';
       if (notify) showToast(t === 'light' ? '☀️ Switched to Light Mode' : '🌙 Switched to Dark Mode');
     }
     applyTheme(localStorage.getItem('theme') || 'dark', false);
@@ -654,6 +664,15 @@
       var current = document.documentElement.getAttribute('data-theme');
       applyTheme(current === 'dark' ? 'light' : 'dark', true);
     });
+
+    // Dismiss loader after 3.5 seconds
+    setTimeout(function() {
+      var loader = document.getElementById('loader');
+      if (loader) {
+        loader.classList.add('loader-hide');
+        setTimeout(function() { loader.remove(); }, 600);
+      }
+    }, 3500);
   </script>
 </body>
 </html>
