--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><polyline points="3 6 5 6 21 6"/><path d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"/><path d="M10 11v6M14 11v6"/></svg>
         Clear
       </button>
+      <button class="btn btn-help" id="help-btn" title="How it works">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+        How it Works
+      </button>
       <button class="btn btn-primary" id="save-btn">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg>
         Save Data
@@ -126,6 +130,138 @@
     <p class="tagline">Track smart. Attend smarter.</p>
 
   </div></div>
+
+  <!-- Guide Modal -->
+  <div class="guide-overlay" id="guide-overlay">
+    <div class="guide-sheet">
+      <div class="guide-header">
+        <h2>How it Works</h2>
+        <button class="guide-close" id="guide-close">&#10005;</button>
+      </div>
+      <div class="guide-body">
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(37,99,235,0.12);color:#2563eb">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">Adding Subjects</div>
+            <div class="guide-section-desc">Tap <strong>Add Subject</strong> to manually add a course, or use <strong>Browse Catalog</strong> to pick from the LPU B.Tech CSE course list. Each subject gets its own card.</div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(46,204,113,0.12);color:#2ecc71">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">What to Enter</div>
+            <div class="guide-section-desc">
+              <strong>Attended</strong> — number of classes you were physically present.<br/>
+              <strong>Delivered</strong> — total classes held by the teacher (including ones you missed).
+            </div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(59,130,246,0.12);color:#3b82f6">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">How % is Calculated</div>
+            <div class="guide-section-desc">
+              <code class="guide-formula">Attendance % = (Classes Attended ÷ Classes Delivered) × 100</code>
+              For example: attended 36 out of 48 → <strong>36 ÷ 48 × 100 = 75%</strong>
+            </div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(245,166,35,0.12);color:#f5a623">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">Colour Indicators</div>
+            <div class="guide-section-desc">
+              <span class="guide-badge" style="background:rgba(46,204,113,0.15);color:#2ecc71">&#x25CF; ≥ 75% &nbsp;Safe</span>
+              <span class="guide-badge" style="background:rgba(59,130,246,0.15);color:#3b82f6">&#x25CF; ≥ 60% &nbsp;Okay</span>
+              <span class="guide-badge" style="background:rgba(245,166,35,0.15);color:#f5a623">&#x25CF; ≥ 50% &nbsp;Warning</span>
+              <span class="guide-badge" style="background:rgba(240,71,71,0.15);color:#f04747">&#x25CF; &lt; 50% &nbsp;At Risk</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(37,99,235,0.12);color:#2563eb">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">Overall Info Bar</div>
+            <div class="guide-section-desc">
+              Below the summary cards, a bar shows your <strong>combined attendance</strong> across all subjects.<br/>
+              • <strong>Can skip N</strong> — you can afford to miss N more classes and still stay above the threshold.<br/>
+              • <strong>Attend N more</strong> — you need to attend N consecutive classes to reach the required %.
+            </div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(46,204,113,0.12);color:#2ecc71">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">Custom Threshold per Subject</div>
+            <div class="guide-section-desc">Each subject card has a small <strong>%</strong> field where you can override the global threshold — useful when one subject requires 85% instead of 75%.</div>
+          </div>
+        </div>
+
+        <div class="guide-section">
+          <div class="guide-section-icon" style="background:rgba(37,99,235,0.12);color:#2563eb">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg>
+          </div>
+          <div>
+            <div class="guide-section-title">Saving Data</div>
+            <div class="guide-section-desc">Tap <strong>Save Data</strong> to store everything in your browser. Your data is kept even when you close the tab — it will be here the next time you open this link.</div>
+          </div>
+        </div>
+
+        <div class="guide-divider"></div>
+
+        <div class="guide-simulate-card">
+          <div class="guide-simulate-header">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+            Simulate Future Attendance
+          </div>
+          <p class="guide-simulate-intro">Enter your current numbers exactly as shown in <strong>LPU Touch / LPU UMS</strong> to get accurate results.</p>
+
+          <div class="guide-simulate-row bunk">
+            <div class="guide-simulate-row-title">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="14" height="14"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+              Planning to Bunk?
+            </div>
+            <div class="guide-simulate-steps">
+              <span class="guide-sim-step"><span class="guide-sim-num">1</span>Add <strong>+1</strong> to <strong>Total Classes</strong></span>
+              <span class="guide-sim-step"><span class="guide-sim-num">2</span>Keep <strong>Attended</strong> unchanged</span>
+              <span class="guide-sim-step"><span class="guide-sim-num">3</span>Check the updated &nbsp;%</span>
+            </div>
+          </div>
+
+          <div class="guide-simulate-row attend">
+            <div class="guide-simulate-row-title">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="14" height="14"><polyline points="20 6 9 17 4 12"/></svg>
+              Planning to Attend?
+            </div>
+            <div class="guide-simulate-steps">
+              <span class="guide-sim-step"><span class="guide-sim-num">1</span>Add <strong>+1</strong> to <strong>Total Classes</strong></span>
+              <span class="guide-sim-step"><span class="guide-sim-num">2</span>Add <strong>+1</strong> to <strong>Attended Classes</strong></span>
+              <span class="guide-sim-step"><span class="guide-sim-num">3</span>Check the updated &nbsp;%</span>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- /guide-body -->
+    </div><!-- /guide-sheet -->
+  </div><!-- /guide-overlay -->
 
   <!-- Save Confirmation Popup -->
   <div class="save-popup-overlay" id="save-popup-overlay">
@@ -496,6 +632,15 @@
       document.getElementById('save-popup-overlay').classList.remove('open');
     });
     document.getElementById('save-popup-overlay').addEventListener('click', function(e) {
+      if (e.target === this) this.classList.remove('open');
+    });
+    document.getElementById('help-btn').addEventListener('click', function() {
+      document.getElementById('guide-overlay').classList.add('open');
+    });
+    document.getElementById('guide-close').addEventListener('click', function() {
+      document.getElementById('guide-overlay').classList.remove('open');
+    });
+    document.getElementById('guide-overlay').addEventListener('click', function(e) {
       if (e.target === this) this.classList.remove('open');
     });
 
